fixed spacing

--- a/src/app/clients/clients-table/clients-table.component.css
+++ b/src/app/clients/clients-table/clients-table.component.css
@@ -12,12 +12,20 @@ h2{
   font-size: 15px;
 }
 
+.tableStuff {
+  text-align: center;
+  padding-left: 30px;
+}
+
 table {
   text-align: center;
-  padding-left: 3%;
+  /* padding-left: 100%; */
   font-family: 'Spectral', serif;
   border-collapse: collapse;
-  width: 100%;
+  /* width: 100%; */
+  width: 90%;
+  /* padding-left: 30px; */
+  /* display: inline-block; */
 }
 
 td, th {
@@ -29,4 +37,8 @@ td, th {
   
 tr:nth-child(even) {
   background-color: #dddddd;
+}
+
+.add{
+  padding: 3%;
 }
